# frigate

./: .dockerignore  .gitignore  .npmrc  .pylintrc  064d4f6f.053ecbf9.js  064d4f6f.1defa2c8.js  064d4f6f.2024243c.js  064d4f6f.34ca5c12.js  064d4f6f.4310906d.js  064d4f6f.5da71045.js  064d4f6f.79105b8c.js  064d4f6f.8107c262.js  064d4f6f.a9c51815.js  064d4f6f.b0a87eb4.js  064d4f6f.b39936e3.js  064d4f6f.b85d0474.js  064d4f6f.bc124d38.js  064d4f6f.e26fa39d.js  1.767acb13.js  1.893d6f7b.js  1.a90b5ba5.js  1.ae1576eb.js  1.b19662af.js  1.d4a988ac.js  17896441.226f2f46.js  17896441.7ff44e5f.js  17896441.8d5dd138.js  17896441.9ee5aadd.js  17896441.da8a454f.js  17896441.ffb5a7dd.js  1c86fc29.0c5fb744.js  1c86fc29.24b64bb9.js  1c86fc29.6ca31a20.js  1c86fc29.86e2b377.js  1c86fc29.9ddf1dd6.js  1c86fc29.b39d5af5.js  1c86fc29.b87ce1a5.js  1c86fc29.e3f3e214.js  1c86fc29.f51a600f.js  2.0c8f52fa.js  (+305 more)
docker/rocm/: CMakeLists.txt  Dockerfile  README.md  debian-backports.sources  requirements-wheels-rocm.txt  rocm-pin-600  rocm.hcl  rocm.list  rocm.mk
docker/rocm/migraphx/: CMakeLists.txt  adjust_allocation.cpp  analyze_streams.cpp  apply_alpha_beta.cpp  argument.cpp  auto_contiguous.cpp  autocast_fp8.cpp  base64.cpp  common.cpp  common_dims.cpp  compile_src.cpp  convert_to_json.cpp  cpp_generator.cpp  dead_code_elimination.cpp  dom_info.cpp  dynamic_loader.cpp  eliminate_allocation.cpp  eliminate_common_subexpression.cpp  eliminate_concat.cpp  eliminate_contiguous.cpp  eliminate_convert.cpp  eliminate_data_type.cpp  eliminate_identity.cpp  eliminate_pad.cpp  env.cpp  file_buffer.cpp  fileutils.cpp  fp8_ocp_to_fnuz.cpp  fp_to_double.cpp  fuse_concat.cpp  fuse_pointwise.cpp  fuse_pointwise_reduce.cpp  fuse_reduce.cpp  generate.cpp  inline_module.cpp  insert_pad.cpp  instruction.cpp  json.cpp  layout_convolution.cpp  lexing.cpp  (+52 more)
docker/rocm/migraphx/api/: CMakeLists.txt  api.cpp  migraphx.py
docker/rocm/migraphx/api/include/migraphx/: migraphx.h  migraphx.hpp
docker/rocm/migraphx/driver/: CMakeLists.txt  argument_parser.hpp  command.hpp  main.cpp  marker_roctx.cpp  marker_roctx.hpp  mlir.cpp  mlir.hpp  models.cpp  models.hpp  passes.cpp  passes.hpp  perf.cpp  perf.hpp  precision.hpp  verify.cpp  verify.hpp  verify_options.hpp
docker/rocm/migraphx/include/migraphx/: adjust_allocation.hpp  algorithm.hpp  allocation_model.hpp  analyze_streams.hpp  any_ptr.hpp  apply_alpha_beta.hpp  argument.hpp  array.hpp  as_number.hpp  assert.hpp  assignment_options.hpp  auto_any_cast.hpp  auto_contiguous.hpp  auto_register.hpp  autocast_fp8.hpp  base64.hpp  bf16.hpp  bit_cast.hpp  bit_signal.hpp  builtin.hpp  check_context.hpp  check_shapes.hpp  clamp.hpp  cloneable.hpp  common.hpp  common_dims.hpp  compile_options.hpp  compile_src.hpp  concat_opt.hpp  config.hpp  context.hpp  convert_to_json.hpp  convolution.hpp  copy_assignable_function.hpp  cpp_generator.hpp  dead_code_elimination.hpp  dfor.hpp  dom_info.hpp  dyn_output.hpp  dynamic_loader.hpp  (+133 more)
docker/rocm/migraphx/include/migraphx/match/: dq_helpers.hpp  gelu_erf.hpp  gelu_tanh.hpp  layernorm.hpp  softmax.hpp
docker/rocm/migraphx/include/migraphx/op/: abs.hpp  acos.hpp  acosh.hpp  add.hpp  allocate.hpp  argmax.hpp  argmin.hpp  as_shape.hpp  asin.hpp  asinh.hpp  atan.hpp  cos.hpp  (+140 more)
docker/rocm/migraphx/onnx/: CMakeLists.txt  broadcast_qdq.cpp  checks.cpp  conv.cpp  map_activation_functions.cpp  onnx.cpp  onnx.proto  onnx_parser.cpp  op_parser.cpp  padding.cpp  parse_arg_op.cpp  parse_aten.cpp  parse_batchnorm.cpp  parse_binary_op.cpp  parse_cast.cpp  parse_castlike.cpp  parse_celu.cpp  parse_clip.cpp  parse_compare_op.cpp  parse_constant.cpp  parse_constant_fill.cpp  parse_constant_of_shape.cpp  parse_conv_transpose.cpp  parse_convolution.cpp  parse_depthtospace.cpp  parse_dequantizelinear.cpp  parse_dropout.cpp  parse_dynamicquantizelinear.cpp  parse_einsum.cpp  parse_expand.cpp  parse_eyelike.cpp  parse_gather_elements.cpp  parse_gelu.cpp  parse_gemm.cpp  parse_generic_op.cpp  parse_greaterorequal.cpp  parse_gridsample.cpp  parse_group_query_attention.cpp  parse_groupnorm.cpp  parse_gru.cpp  (+68 more)
docker/rocm/migraphx/targets/cpu/: CMakeLists.txt  allocate.cpp  allocation_model.cpp  binary.cpp  concat.cpp  convolution.cpp  copy.cpp  deconvolution.cpp  dnnl.cpp  eltwise.cpp  erf.cpp  fmod.cpp  fuse_ops.cpp  gather.cpp  gemm.cpp  layernorm.cpp  logsoftmax.cpp  lowering.cpp  lrn.cpp  mod.cpp  pooling.cpp  preallocate.cpp  reduction.cpp  reorder.cpp  softmax.cpp  sub.cpp  target.cpp  write_literals.cpp
docker/rocm/migraphx/targets/fpga/: CMakeLists.txt  lowering.cpp  subgraph.cpp  target.cpp  vitis_ai_adapter.cpp
docker/rocm/migraphx/targets/gpu/: CMakeLists.txt  abs.cpp  allocation_model.cpp  analyze_streams.cpp  argmax.cpp  argmin.cpp  code_object_op.cpp  compile_gen.cpp  compile_hip.cpp  compile_hip_code_object.cpp  compile_hipblaslt.cpp  compile_miopen.cpp  compile_ops.cpp  compile_pointwise.cpp  compiler.cpp  device_name.cpp  fuse_ck.cpp  fuse_mlir.cpp  fuse_ops.cpp  gemm_impl.cpp  hip.cpp  hip_gemm_impl.cpp  hipblaslt.cpp  kernel.cpp  logsoftmax.cpp  loop.cpp  lowering.cpp  lrn.cpp  mlir.cpp  multinomial.cpp  no_device.cpp  nonzero.cpp  pack_args.cpp  perfdb.cpp  pooling.cpp  prefuse_ops.cpp  prepare_reduce.cpp  problem_cache.cpp  reverse.cpp  rnn_variable_seq_lens.cpp  (+7 more)
docker/rocm/migraphx/targets/ref/: CMakeLists.txt  lowering.cpp  target.cpp
docker/rocm/migraphx/tf/: CMakeLists.txt  attr_value.proto  function.proto  graph.proto  node_def.proto  op_def.proto  op_parser.cpp  parse_arg_op.cpp  parse_batchnorm.cpp  parse_biasadd.cpp  parse_binary_op.cpp  parse_cast.cpp  parse_concat.cpp  parse_constant.cpp  parse_conv.cpp  parse_depthwiseconv.cpp  parse_expanddims.cpp  parse_gather.cpp  parse_generic_op.cpp  parse_matmul.cpp  parse_mean.cpp  parse_onehot.cpp  parse_pack.cpp  parse_pad.cpp  parse_pooling.cpp  parse_relu6.cpp  parse_reshape.cpp  parse_shape.cpp  parse_slice.cpp  parse_softmax.cpp  parse_split.cpp  parse_squeeze.cpp  parse_stridedslice.cpp  parse_transpose.cpp  tensor.proto  tf.cpp  tf_parser.cpp
plugin/: CMakeLists.txt  FlattenConcat.cpp
(+6012 files in other folders)
